# muthur

./: README.md
py/: pyproject.toml  test.md
py/src/muthur/: __init__.py  result.py
py/src/muthur/llm/: prompt.py
py/test/: prompt_test.py
