[project]
name = "muthur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Garrett", email = "chris@nesteggs.ca" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
muthur = "muthur:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
